--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
     <testsuites>
         <testsuite name="MF\Parser\CallbackParser Test Suite">
             <directory>./Tests</directory>
+            <directory>./vendor</directory>
         </testsuite>
     </testsuites>
 
