--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         }
     },
     "require": {
-        "php": ">=5.5 || >=7.0"
+        "php": ">=7.0",
+        "beberlei/assert": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
+        "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0"
     }
 }
