--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,24 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
+        "phpstan/phpstan": "^0.6.3",
+        "friendsofphp/php-cs-fixer": "^2.1",
+        "squizlabs/php_codesniffer": "^2.8",
         "satooshi/php-coveralls": "^1.0"
+    },
+    "scripts": {
+        "test": [
+            "@cs",
+            "@phpunit",
+            "@phpstan"
+        ],
+        "cs": "vendor/bin/phpcs --standard=ruleset.xml .",
+        "phpunit": "vendor/bin/phpunit -c phpunit.xml.dist",
+        "phpstan": "vendor/bin/phpstan analyse -l 5 -c phpstan.neon src Tests",
+        "fix": [
+            "./bin/php-cs-fixer fix src",
+            "./bin/php-cs-fixer fix tests",
+            "./bin/phpcbf --standard=ruleset.xml ."
+        ]
     }
 }
