--- a/composer.json
+++ b/composer.json
@@ -17,33 +17,35 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "MF\\Tests\\": "Tests"
+            "MF\\Parser\\": "tests"
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": "^7.1",
         "beberlei/assert": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.6.3",
-        "friendsofphp/php-cs-fixer": "^2.1",
-        "squizlabs/php_codesniffer": "^2.8",
+        "lmc/coding-standard": "^1.1",
+        "phpstan/phpstan-shim": "^0.9",
+        "phpunit/phpunit": "^7.0",
         "satooshi/php-coveralls": "^1.0"
     },
+    "config": {
+        "sort-packages": true,
+        "bin-dir": "bin"
+    },
     "scripts": {
-        "test": [
-            "@cs",
-            "@phpunit",
-            "@phpstan"
+        "all": [
+            "@analyze", "@tests-ci"
         ],
-        "cs": "vendor/bin/phpcs --standard=ruleset.xml .",
-        "phpunit": "vendor/bin/phpunit -c phpunit.xml.dist",
-        "phpstan": "vendor/bin/phpstan analyse -l 5 -c phpstan.neon src Tests",
+        "analyze": [
+            "bin/ecs check -vvv --ansi src/ tests/",
+            "bin/phpstan analyze ./src ./tests -c phpstan.neon --ansi --level 7"
+        ],
+        "tests": "bin/phpunit",
+        "tests-ci": "mkdir -p code-coverage && php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
         "fix": [
-            "./bin/php-cs-fixer fix src",
-            "./bin/php-cs-fixer fix tests",
-            "./bin/phpcbf --standard=ruleset.xml ."
+            "bin/ecs check -vvv --ansi --clear-cache --fix src/ tests/"
         ]
     }
 }
