--- a/composer.json
+++ b/composer.json
@@ -29,26 +29,28 @@
     },
     "require-dev": {
         "lmc/coding-standard": "^1.1",
-        "phpstan/phpstan-shim": "^0.9",
-        "phpunit/phpunit": "^7.0",
-        "satooshi/php-coveralls": "^1.0"
+        "php-coveralls/php-coveralls": "^2.1",
+        "phpstan/phpstan-shim": "^0.10",
+        "phpunit/phpunit": "^7.0"
     },
     "config": {
-        "sort-packages": true,
-        "bin-dir": "bin"
+        "sort-packages": true
     },
     "scripts": {
         "all": [
-            "@analyze", "@tests-ci"
+            "@analyze",
+            "@tests-ci"
         ],
         "analyze": [
-            "bin/ecs check -vvv --ansi src/ tests/",
-            "bin/phpstan analyze ./src ./tests -c phpstan.neon --ansi --level 7"
+            "@cs",
+            "@phpstan"
         ],
-        "tests": "bin/phpunit",
-        "tests-ci": "mkdir -p code-coverage && php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
+        "cs": "vendor/bin/ecs check -vvv --ansi -- src/ tests/",
+        "phpstan": "vendor/bin/phpstan analyze src tests -c phpstan.neon --ansi --level 7",
+        "tests": "vendor/bin/phpunit",
+        "tests-ci": "php -dxdebug.coverage_enable=1 vendor/bin/phpunit -c phpunit.xml.dist --exclude-group local",
         "fix": [
-            "bin/ecs check -vvv --ansi --clear-cache --fix src/ tests/"
+            "vendor/bin/ecs check -vvv --ansi --clear-cache --fix -- src/ tests/"
         ]
     }
 }
