--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "require": {
         "php": "^7.1",
+        "ext-mbstring": "*",
         "beberlei/assert": "^2.7 || ^3.0"
     },
     "require-dev": {
