--- a/easy-coding-standard.yaml
+++ b/easy-coding-standard.yaml
@@ -8,3 +8,7 @@ parameters:
 
         PHP_CodeSniffer\Standards\Generic\Sniffs\NamingConventions\UpperCaseConstantNameSniff.ClassConstantNotUpperCase:
             - 'tests/Fixtures/functions.php'
+
+services:
+    PhpCsFixer\Fixer\Phpdoc\NoSuperfluousPhpdocTagsFixer:
+        allow_mixed: true
